--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Assets
+Content/Assets/
+
 # Created by https://www.toptal.com/developers/gitignore/api/unrealengine,visualstudio,visualstudiocode,c++
 # Edit at https://www.toptal.com/developers/gitignore?templates=unrealengine,visualstudio,visualstudiocode,c++
 
