--- a/.gitignore
+++ b/.gitignore
@@ -521,3 +521,4 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/unrealengine,visualstudio,visualstudiocode,c++
+GermanShepherd_M.png
