디폴트 레벨을 Main으로 재설정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+EditorStartupMap=/Game/Maps/Main.Main
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -22,7 +22,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+GameDefaultMap=/Game/Maps/Main.Main
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_ExploreGameMode.BP_ExploreGameMode_C
 GlobalDefaultServerGameMode=None
